--- a/style.css
+++ b/style.css
@@ -13,6 +13,36 @@ h1 {
     text-align: center;
 }
 
+.member {
+  display:inline-block;
+  margin-bottom:2rem;
+  margin-top:2rem;
+}
+
+.member h2{
+  /* float:left; */
+  display:inline-block;
+  margin-left:2%;
+  margin-bottom:0;
+}
+
+.member span{
+  float:right;
+}
+
+.member p{
+  margin-left:29%;
+  /* display:block; */
+}
+
+.social {
+  width:1.5rem;
+  opacity:0.4;
+  text-align:center;
+  /* display: inline-block; */
+  /* float:right; */
+}
+
 .logo {
   /* position:absolute; */
   left:20;
@@ -21,6 +51,11 @@ h1 {
   opacity:0.7;
   /* margin-bottom:2em; */
 }
+
+.avatar {
+  border-radius:50%;
+}
+
 
 .rating {
   height: 50px;
@@ -77,12 +112,22 @@ h1 {
 .dp {
   width:25%;
   float: left;
-  padding-right:1.5em;
+  /* padding-right:1.5em; */
+  border-radius:50%;
+  margin-right:1rem;
+  /* margin-bottom: 3.5rem; */
   /* display: inline-block; */
   /* position:relative; */
   /* margin-left: 2%; */
   /* margin-right: auto; */
 }
+
+.dpdiv {
+  padding-right:1.5em;
+  opacity:0.2;
+  /* display: block; */
+}
+
 
 .icon {
   width:15%;
