--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .member p{
-  margin-left:29%;
+  margin-left:calc(25% + 2%);
   /* display:block; */
 }
 
@@ -115,7 +115,7 @@ h1 {
   float: left;
   /* padding-right:1.5em; */
   border-radius:50%;
-  margin-right:1rem;
+  /* margin-right:1rem; */
   /* margin-bottom: 3.5rem; */
   /* display: inline-block; */
   /* position:relative; */
